# LLMCouncil-Optimization

./: .env.example  ARCHITECTURE.md  README.md  pyproject.toml  start.ps1  start.sh
backend/: agents_store.py  cache_utils.py  config.py  council.py  entity_type_normalizer.py  file_utils.py  job_runner.py  jobs_store.py  kb_retrieval.py  kb_store.py  kb_watch.py  kg_extractor.py  kg_interpret.py  kg_utils.py  llm_client.py  main.py  neo4j_store.py  office_extract.py  plugin_manager.py  plugins_store.py  projects_store.py  rerank.py  settings_store.py  storage.py  tool_context.py  trace_store.py  web_search.py
backend/tools/: __init__.py  builtins.py  evidence_pack.py  kb_index.py  kg_extract.py  office_ingest.py  paper_search.py  registry.py  web_search.py
docs/: deployment-multiuser-design.md
docs/design/: vcp-rag-kb-benchmark.md
docs/patent/: 专利要点与权利要求草案.md
docs/performance/: memory-optimization.md
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  index.css  main.jsx
frontend/src/components/: AgentsModal.css  AgentsModal.jsx  ChatInterface.css  ChatInterface.jsx  ConversationAgentsModal.css  ConversationAgentsModal.jsx  ErrorBoundary.css  ErrorBoundary.jsx  GraphPage.css  GraphPage.jsx  KnowledgeBasePage.css  KnowledgeBasePage.jsx  Markdown.jsx  MultiSelectDropdown.css  MultiSelectDropdown.jsx  PluginsPage.css  PluginsPage.jsx  SettingsModal.css  SettingsModal.jsx  Sidebar.css  Sidebar.jsx  Stage0.css  Stage0.jsx  Stage1.jsx  Stage2.jsx  Stage2b.css  Stage2b.jsx  Stage3.jsx  (+4 more)
scripts/: neo4j_cleanup_kgchunk_text.py
